--- a/_includes/head.html
+++ b/_includes/head.html
@@ -27,7 +27,7 @@
   <link href="/lib/animate/animate.min.css" rel="stylesheet">
   <link href="/lib/venobox/venobox.css" rel="stylesheet">
   <link href="/lib/owlcarousel/assets/owl.carousel.min.css" rel="stylesheet">
-  {%- if page.layout == "post" -%}
+  {%- if page.layout == "post" or page.layout == "docs" -%}
   <link href="/css/tomorrow-night-eighties.css" rel="stylesheet">
   {%- endif -%}
 
