--- a/css/style.css
+++ b/css/style.css
@@ -1872,7 +1872,9 @@
     .show-more a {
         color: white;
     }
-
+    .show-more .link {
+        padding: 0px 0;
+    }
     .show-more .link.popup-modal {
         padding: 0px 0;
     }
@@ -2007,7 +2009,6 @@
         background: rgba(13, 20, 41, 0.8);
         padding: 1px;
         padding-top: 100px;
-
     }
     .post p {
         color: #ebebeb;
@@ -2111,7 +2112,6 @@
         background: transparent;
         padding: 0.3rem 1rem;
         color: #34aadc;
-
     }
 
     @media (max-width: 767px) {
@@ -2123,3 +2123,231 @@
             padding-left: 0;
         }       
     }
+
+/*--------------------------------------------------------------
+# Docs Pages
+--------------------------------------------------------------*/
+#docs {
+    background: rgba(13, 20, 41, 0.8);
+    padding: 1px;
+    color: white;
+    overflow: hidden;
+}
+
+#docs p {
+    color: #ebebeb;
+}
+
+#docs h1, #docs h2, #docs h3, #docs h4, #docs h5, #docs h6 {
+    color: white;
+    font-weight: 600;     
+}
+
+#docs li {
+    color: #ebebeb;
+    list-style: none;
+}
+
+#docs a {
+    color: #ebebeb;
+}
+
+#docs #docs-nav a {
+    color: white;
+}
+
+#docs #docs-nav {
+    width: 268px;
+    position: fixed;
+    left: 0;
+    padding: 20px;
+    padding-left: 30px;
+    padding-right: 30px;
+    background: rgba(13, 20, 41, 0.8);
+    height: calc(100% - 130px);
+    margin-top: 100px;
+    margin-left: 10px;
+    border: solid 5px rgba(13, 20, 41, 0);
+    overflow: auto;
+    overflow-y: scroll;
+    box-shadow: 0px 0px 0px 1px rgb(162, 0, 103);
+    word-wrap: break-word;
+}
+
+#docs ul {
+    padding-left: 20px;
+
+}
+
+#docs #docs-nav ul {
+    width: 100%;
+}
+
+#docs #toc > ul {
+    padding-left: 0px;
+}
+
+#docs #docs-nav ul > li a{
+    color:#CCC;
+    font-weight: bolder;
+
+}
+
+#docs #docs-nav ul > li ul li a{
+    color:white;
+    font-weight: unset;
+}
+
+#docs #docs-nav a {
+    display: block;
+    padding-bottom:  15px;
+    padding-left: 0;
+    padding-right: 0;
+}
+
+#docs #docs-nav .row {
+    margin-right: 0px;
+    margin-left: 0px;
+}
+
+#docs #links {
+    padding-left: 0px;
+}
+
+#docs #docs-content {
+    padding-left: 290px;
+    padding-top: 100px;
+    margin-bottom: 20px;
+    width: 99%;
+}
+
+#docs nav h1, #docs nav h2, #docs nav a {
+    font-size: 14px;
+}
+
+#docs #docs-nav h1 {
+    text-align: center;
+    font-size: 24px;
+    font-weight: bolder;
+    color: white;
+}
+
+.scrollbar-design {
+    scrollbar-color:rgba(136, 136, 136, 0.3) rgba(0, 0, 0, 0.001);
+    scrollbar-width: thin;
+}
+
+.scrollbar-design::-webkit-scrollbar {
+    width: 10px;
+}
+
+.scrollbar-design::-webkit-scrollbar-thumb {
+    border-radius: 10px;
+    background-color: rgba(136, 136, 136, 0.3);
+}
+
+#docs #collapse-button-docs {
+    position: relative;
+    left: -200px;
+    text-align: center;
+}
+ 
+#docs #search-filter {
+    background: rgba(13, 20, 41, 1);
+    border: 0;
+    border-radius: 2px;
+    -moz-border-radius: 2px;
+    -webkit-border-radius: 2px;
+    box-shadow: inset 0 1px 2px rgba(03, 10, 31, 1);
+    -moz-box-shadow: inset 0 1px 2px rgba(03, 10, 31, 1);
+    -webkit-box-shadow: inset 0 1px 2px rgba(03, 10, 31, 1);
+    color: #ddd;
+    margin-bottom: 20px;
+    padding: 5px 10px;
+    width: 115%;
+    margin-left: -15px;
+    margin-right: 15px;
+}
+
+#collapse-button-docs::after {
+    content: "-";
+}
+
+#collapse-button-docs.collapsed::after {
+    content: "+";
+}
+
+#docs-content .post {
+    padding: 30px;
+    overflow-wrap: break-word;
+}
+
+#docs #copy-button {
+    background: none;
+    border: none;
+    color: white;
+    font-size: 13px;
+    opacity: 0;
+    vertical-align: middle;
+    padding-left: 15px;
+}
+
+#docs #copy-button:hover {
+    color: #34aadc;
+}
+
+#docs #copy-button:focus {
+    outline: none;
+    color: rgba(52, 170, 220, 0.5);
+}
+
+#docs .clickable-header:hover #copy-button {
+    opacity: 1;
+}
+
+#docs #toggle-navdoc-btn {
+    position: fixed;
+    left: 15px;
+    top: 124px;
+    color: white;
+    border: none;
+    border-radius: 50px;
+    width: 35px;
+    height: 35px;
+    font-size: 18px;
+    background: rgba(162, 0, 103, 0.5);
+    display: none;
+}
+
+#docs #toggle-navdoc-btn:focus {
+    outline: none;
+}
+
+@media (max-width: 574px) {
+    #docs {
+        padding: 0px;
+    }
+
+    #docs #docs-nav {
+        display: none;
+    }
+
+    #docs #docs-content {
+        padding-left: 0;
+        width: 100%;
+        padding-top: 70px;
+        margin-bottom: 0px;
+    }
+    #docs #docs-nav {
+        background: rgba(13, 20, 41, 0.95);
+    }
+    #docs #toggle-navdoc-btn {
+        display: inline;
+    }
+}
+
+@media (max-width: 767px) {
+    .post h1, .post h2 {
+        text-align: unset;
+    }
+}
