--- a/css/style.css
+++ b/css/style.css
@@ -1093,9 +1093,31 @@
 
     #footer {
         background: #101522;
-        padding: 0 0 25px 0;
         color: #eee;
         font-size: 14px;
+        max-width: 100%;
+        overflow: hidden;
+        padding-top: 30px;
+        padding-bottom: 30px;
+        font-size: 16px;
+    }
+
+    #footer a {
+        color: white;
+    }
+
+    #footer ul {
+        list-style-type: none;
+    }
+
+    #footer li {
+        padding-bottom: 10px;
+    }
+
+    #footer #links {
+        padding-bottom: 30px;
+        margin-left: 10%;
+        margin-right: 10%;
     }
 
     #footer #by {
@@ -1114,13 +1136,13 @@
     #footer #infos {
         text-align: right;
     }
+    
     #footer li:first-child {
         margin-bottom: 10px;
         margin-top: 10px;
         font-size: 20px;
         text-transform: uppercase;
       }
-
     /*--------------------------------------------------------------
 # Responsive Media Queries
 --------------------------------------------------------------*/
