Fix footer mobile version

--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -1,6 +1,6 @@
 <footer id="footer">
   <div class="row" id="links">
-    <div class="col-4 row">
+    <div class="col-md-4">
       
       <div>
         <ul>
@@ -16,7 +16,7 @@
         </ul>
       </div>
     </div>
-    <div class="col-4 row">
+    <div class="col-md-4">
       
       <div>
         <ul>
@@ -32,7 +32,7 @@
         </ul>
       </div>
     </div>
-    <div class="col-4" id="infos">
+    <div class="col-md-4" id="infos">
       <div>
         <img src="/img/logos/logo-eyes_NB.svg">
         
