:books: add english doc and modify layout security

--- a/_layouts/security.html
+++ b/_layouts/security.html
@@ -16,9 +16,7 @@ layout: default
         {% elsif page.lang == "fr" %}
           {% assign previous = "Précédent" %}
         {% endif %}
-        {% assign type = "security" %}
-
-        <a href="/{{ page.lang }}/{{ type }}" class="text-right col-6" ><i class="fas fa-caret-left"></i> {{ previous }}</a>
+        <a href="/{{ page.lang }}/security" class="text-right col-6" ><i class="fas fa-caret-left"></i> {{ previous }}</a>
       </div>
     <HR>
     <div class="post-content" itemprop="articleBody">
